--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0662bf99",
    "metadata": {},
    "outputs": [],
@@ -3305,7 +3305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "4738c081",
    "metadata": {},
    "outputs": [],
@@ -3315,7 +3315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 36,
    "id": "ee151318",
    "metadata": {},
    "outputs": [],
@@ -3325,7 +3325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "id": "6d26a32c",
    "metadata": {},
    "outputs": [
@@ -3381,7 +3381,7 @@
        "M        8978  31391"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3392,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "id": "3806cc4c",
    "metadata": {},
    "outputs": [],
@@ -3403,23 +3403,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "1e016b7d",
+   "execution_count": 39,
+   "id": "b4899b22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3773691128041047"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def chi2_test(table, variables=False):\n",
+    "    chi2, p, degf, expected = stats.chi2_contingency(table)\n",
+    "    print('Observed')\n",
+    "    print(observed.values)\n",
+    "    print('\\nExpected')\n",
+    "    print(expected.astype(int))\n",
+    "    print('\\n----')\n",
+    "    print(f'chi^2 = {chi2:.4f}')\n",
+    "    print(f'p     = {p}')\n",
+    "    if variables:\n",
+    "        return  chi2, p, degf, expected\n",
+    "    else:\n",
+    "        return\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "95f41264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hypothesis_result(p, alpha = 0.05):\n",
+    "    if p < alpha:\n",
+    "        print('We reject the null hypothesis')\n",
+    "    else:\n",
+    "        print(\"we fail to reject the null hypothesis\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c80fecb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chi2_test(table, variables=False):\n",
+    "    chi2, p, degf, expected = stats.chi2_contingency(table)\n",
+    "    print('Observed')\n",
+    "    print(table.values)\n",
+    "    print('\\nExpected')\n",
+    "    print(table.astype(int))\n",
+    "    print('\\n----')\n",
+    "    print(f'chi^2 = {chi2:.4f}')\n",
+    "    print(f'p     = {p}')\n",
+    "    if variables:\n",
+    "        return  chi2, p, degf, expected\n",
+    "    else:\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3afa4a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>dept_no</th>\n",
+       "      <th>d001</th>\n",
+       "      <th>d007</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>5864</td>\n",
+       "      <td>20854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>8978</td>\n",
+       "      <td>31391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "dept_no  d001   d007\n",
+       "gender              \n",
+       "F        5864  20854\n",
+       "M        8978  31391"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observed3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e58a1da7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fail To Reject Null Hypothesis\n"
+      "Observed\n",
+      "[[ 5864 20854]\n",
+      " [ 8978 31391]]\n",
+      "\n",
+      "Expected\n",
+      "dept_no  d001   d007\n",
+      "gender              \n",
+      "F        5864  20854\n",
+      "M        8978  31391\n",
+      "\n",
+      "----\n",
+      "chi^2 = 0.7793\n",
+      "p     = 0.3773691128041047\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/bf/lhpb5n_j1xj4msxy6nrm9h7h0000gn/T/ipykernel_47916/3914195617.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdegf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchi2_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobserved3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
      ]
     }
    ],
    "source": [
-    "if p < alpha:\n",
-    "    print(\"Reject Null Hypothesis\")\n",
-    "else:\n",
-    "    print(\"Fail To Reject Null Hypothesis\")"
+    "chi, p, degf, expected = chi2_test(observed3)"
    ]
   },
   {
